--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
 		"eslint-plugin-roblox-ts": "^0.0.30",
 		"prettier": "^2.3.2",
 		"rbxts-transformer-flamework": "^1.2.2",
-		"roblox-ts": "^2.3.0",
+		"roblox-ts": "^3.0.0",
 		"typescript": "~5.2.2"
 	},
 	"dependencies": {
 		"@flamework/components": "^1.2.2",
 		"@flamework/core": "^1.2.2",
 		"@flamework/networking": "^1.2.2",
+		"@rbxts/camera-shaker": "^1.0.8",
 		"@rbxts/charm": "^0.10.0",
 		"@rbxts/lemon-signal": "^1.2.0",
 		"@rbxts/object-utils": "^1.0.4",
