--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
 		"allowSyntheticDefaultImports": true,
 		"downlevelIteration": true,
 		"jsx": "react",
-		"jsxFactory": "Roact.createElement",
-		"jsxFragmentFactory": "Roact.createFragment",
+		"jsxFactory": "React.createElement",
+		"jsxFragmentFactory": "React.createFragment",
 		"module": "commonjs",
 		"moduleResolution": "Node",
 		"noLib": true,
@@ -27,7 +27,7 @@
 		"plugins": [
 			{
 				"transform": "rbxts-transformer-flamework",
-				"obfuscation": false
+				"obfuscation": true
 			}
 		]
 	}
